--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
-reqwest = { version = "0.12.4", features = ["json"] }
-serde = { version = "1.0.202", features = ["derive"] }
-serde_json = "1.0.117"
-tokio = { version = "1.37.0", features = ["full"] }
+mensa-cli-backend = { git = "https://github.com/floork/mensa-cli-backend.git" }
+tokio = "1.37.0"
