--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ clap = { version = "4.5.4", features = ["derive"] }
 mensa-cli-backend = { git = "https://github.com/floork/mensa-cli-backend.git" }
 serde = "1.0.203"
 shellexpand = "3.1.0"
+tabled = { version = "*", features = ["ansi"] }
 tokio = "1.37.0"
 toml = "0.8.14"
