--- a/.github/workflows/tag-to-release.yml
+++ b/.github/workflows/tag-to-release.yml
@@ -15,9 +15,16 @@ jobs:
       with:
         fetch-depth: 0 # Fetch all history so we can push tags
 
-    - name: Push to release branch
+    - name: Set up Git
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git checkout -b release
+
+    - name: Pull latest changes from release branch
+      run: |
+        git checkout release || git checkout -b release
+        git pull origin release
+
+    - name: Push to release branch
+      run: |
         git push origin release
