--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Download build artifacts
         uses: actions/download-artifact@v3
         with:
-          name: my-project
+          name: discord-bot
 
       - name: Create GitHub Release
         id: create_release
@@ -71,5 +71,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: target/release/discord-bot
-          asset_name: my-project
+          asset_name: discord-bot
           asset_content_type: application/octet-stream
