--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build project
         run: cargo build --release
 
+      - name: List build directory
+        run: ls -la target/release
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -53,6 +56,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: discord-bot
+          path: target/release
+
+      - name: List downloaded artifacts directory
+        run: ls -la target/release
 
       - name: Create GitHub Release
         id: create_release
