--- a/.github/workflows/create_pkg.yml
+++ b/.github/workflows/create_pkg.yml
@@ -1,24 +1,36 @@
-name: Create Package
+name: Build and Publish Docker Image
 
 on:
-  workflow_dispatch:
   push:
+    branches:
+      - release
+  pull_request:
     branches:
       - release
 
 jobs:
-  release:
-    name: release ${{ matrix.target }}
+  build-and-publish:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        target: [x86_64-pc-windows-gnu, x86_64-unknown-linux-musl]
+
     steps:
-      - uses: actions/checkout@master
-      - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          RUSTTARGET: ${{ matrix.target }}
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: ghcr.io/${{ github.repository }}:latest
+
+    - name: Log out from GitHub Container Registry
+      run: docker logout ghcr.io
