--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,20 +2,43 @@ name: Release
 
 on:
   push:
-    tags: ["v[0-9]+.[0-9]+.[0-9]+*"]
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+*"
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   CARGO_TERM_COLOR: always
 
 jobs:
-  linux:
+  release:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Install dependencies
-        run: |
-          sudo apt-get install cmake pkg-config
-      - name: Test
+        run: sudo apt-get install -y cmake pkg-config
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Build Release
+        run: cargo build --release
+
+      - name: Test Release
         run: cargo test --release
+
+      - name: Package Release
+        run: |
+          mkdir -p dist
+          cp target/release/discord-bot dist/
+
+      - name: Upload Assets
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          chmod +x .github/workflows/upload_asset.sh
+          ./.github/workflows/upload_asset.sh dist/discord-bot $GITHUB_TOKEN
